--- a/outcoming-resources/index.html
+++ b/outcoming-resources/index.html
@@ -107,9 +107,31 @@
 		</div>
 		<div class="ct-panel-content" data-device="desktop"><div class="ct-panel-content-inner"></div></div>
 <div class="ct-panel-content" data-device="mobile"><div class="ct-panel-content-inner">
-<nav class="mobile-menu" data-id="mobile-menu" data-interaction="click" data-toggle-type="type-1" aria-label="Off Canvas Menu">
-	<ul id="menu-about" role="menubar">
-<li id="menu-item-4037" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4037" role="none"><a href="https://tejaltarde.github.io/About//company/" class="ct-menu-link" role="menuitem">Company</a></li>
+<nav class="mobile-menu has-submenu" data-id="mobile-menu" data-interaction="click" data-toggle-type="type-1" aria-label="Off Canvas Menu">
+	<ul>
+<li class="page_item page-item-4021"><a href="https://tejaltarde.github.io/About//about/" class="ct-menu-link">About</a></li>
+<li class="page_item page-item-3069"><a href="https://tejaltarde.github.io/About//ai-ml/" class="ct-menu-link">AI &#038; ML</a></li>
+<li class="page_item page-item-3929"><a href="https://tejaltarde.github.io/About//apllication-moderrization/" class="ct-menu-link">Apllication moderrization</a></li>
+<li class="page_item page-item-4016"><a href="https://tejaltarde.github.io/About//blog/" class="ct-menu-link">Blogs</a></li>
+<li class="page_item page-item-4014"><a href="https://tejaltarde.github.io/About//case-studies/" class="ct-menu-link">Case Studies</a></li>
+<li class="page_item page-item-3065"><a href="https://tejaltarde.github.io/About//cloud/" class="ct-menu-link">Cloud</a></li>
+<li class="page_item page-item-90"><a href="https://tejaltarde.github.io/About//company/" class="ct-menu-link">Company</a></li>
+<li class="page_item page-item-4019"><a href="https://tejaltarde.github.io/About//contact/" class="ct-menu-link">Contact</a></li>
+<li class="page_item page-item-3233 current_page_item current-menu-item"><span class="ct-sub-menu-parent"><a href="https://tejaltarde.github.io/About//outcoming-resources/" aria-current="page" class="ct-menu-link">CTO</a></span></li>
+<li class="page_item page-item-3229"><a href="https://tejaltarde.github.io/About//ecommerce-2/" class="ct-menu-link">digital experience design</a></li>
+<li class="page_item page-item-3783"><a href="https://tejaltarde.github.io/About//digital-product/" class="ct-menu-link">Digital Product</a></li>
+<li class="page_item page-item-3231"><a href="https://tejaltarde.github.io/About//job-portal-2/" class="ct-menu-link">Ecommerce Solution</a></li>
+<li class="page_item page-item-3067"><a href="https://tejaltarde.github.io/About//ecommerce/" class="ct-menu-link">Ecommerce web</a></li>
+<li class="page_item page-item-3997"><a href="https://tejaltarde.github.io/About//elite-team-service/" class="ct-menu-link">Elite team service</a></li>
+<li class="page_item page-item-3059"><a href="https://tejaltarde.github.io/About//home-page/" class="ct-menu-link">Home</a></li>
+<li class="page_item page-item-3995"><a href="https://tejaltarde.github.io/About//job-portal-new/" class="ct-menu-link">Job Portal new</a></li>
+<li class="page_item page-item-3063"><a href="https://tejaltarde.github.io/About//mobile-development/" class="ct-menu-link">Mobile Development</a></li>
+<li class="page_item page-item-3953"><a href="https://tejaltarde.github.io/About//monitoring-and-maintance/" class="ct-menu-link">Monitoring and maintance</a></li>
+<li class="page_item page-item-3848"><a href="https://tejaltarde.github.io/About//digital-product-engineering/" class="ct-menu-link">Performance Engineering</a></li>
+<li class="page_item page-item-264"><a href="https://tejaltarde.github.io/About//pricing/" class="ct-menu-link">Pricing</a></li>
+<li class="page_item page-item-171"><a href="https://tejaltarde.github.io/About//" class="ct-menu-link">Product</a></li>
+<li class="page_item page-item-3227"><a href="https://tejaltarde.github.io/About//services/" class="ct-menu-link">Services</a></li>
+<li class="page_item page-item-3061"><a href="https://tejaltarde.github.io/About//web-development/" class="ct-menu-link">Web Development</a></li>
 </ul></nav>
 
 </div></div>
@@ -134,41 +156,7 @@
 <nav id="header-menu-1" class="header-menu-1" data-id="menu" data-interaction="hover" data-menu="type-1" data-dropdown="type-1:simple" data-responsive="no" itemscope="" itemtype="https://schema.org/SiteNavigationElement" aria-label="Header Menu">
 
 	<ul id="menu-primary-menu" class="menu" role="menubar">
-<li id="menu-item-4036" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4036" role="none"><a href="https://tejaltarde.github.io/Project.github.io//" class="ct-menu-link" role="menuitem">Home</a></li>
-<li id="menu-item-4035" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4035" role="none"><a href="https://tejaltarde.github.io/Project.github.io//company/" class="ct-menu-link" role="menuitem">About</a></li>
-<li id="menu-item-4029" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-4029 animated-submenu" role="none">
-<a href="#" class="ct-menu-link" role="menuitem">Product<span class="ct-toggle-dropdown-desktop"><svg class="ct-icon" width="8" height="8" viewbox="0 0 15 15"><path d="M2.1,3.2l5.4,5.4l5.4-5.4L15,4.3l-7.5,7.5L0,4.3L2.1,3.2z"></path></svg></span></a><button class="ct-toggle-dropdown-desktop-ghost" aria-label="Expand dropdown menu" aria-haspopup="true" aria-expanded="false" role="menuitem"></button>
-<ul class="sub-menu" role="menu">
-	<li id="menu-item-3236" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3236" role="none"><a href="https://tejaltarde.github.io/About//job-portal-2/" class="ct-menu-link" role="menuitem">Ecommerce Solution</a></li>
-	<li id="menu-item-4030" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-4030 animated-submenu" role="none">
-<a href="#" class="ct-menu-link" role="menuitem">Job Portal<span class="ct-toggle-dropdown-desktop"><svg class="ct-icon" width="8" height="8" viewbox="0 0 15 15"><path d="M2.1,3.2l5.4,5.4l5.4-5.4L15,4.3l-7.5,7.5L0,4.3L2.1,3.2z"></path></svg></span></a><button class="ct-toggle-dropdown-desktop-ghost" aria-label="Expand dropdown menu" aria-haspopup="true" aria-expanded="false" role="menuitem"></button>
-	<ul class="sub-menu" role="menu">
-		<li id="menu-item-239" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-239" role="none"><a href="https://tejaltarde.github.io/About//" class="ct-menu-link" role="menuitem">Product</a></li>
-		<li id="menu-item-100" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-100" role="none"><a href="https://tejaltarde.github.io/About//company/" class="ct-menu-link" role="menuitem">Company</a></li>
-		<li id="menu-item-290" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-290" role="none"><a href="https://tejaltarde.github.io/About//pricing/" class="ct-menu-link" role="menuitem">Pricing</a></li>
-	</ul>
-</li>
-</ul>
-</li>
-<li id="menu-item-4032" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-ancestor current_page_ancestor menu-item-has-children menu-item-4032 animated-submenu" role="none">
-<a href="https://tejaltarde.github.io/About//services/" class="ct-menu-link" role="menuitem">Services<span class="ct-toggle-dropdown-desktop"><svg class="ct-icon" width="8" height="8" viewbox="0 0 15 15"><path d="M2.1,3.2l5.4,5.4l5.4-5.4L15,4.3l-7.5,7.5L0,4.3L2.1,3.2z"></path></svg></span></a><button class="ct-toggle-dropdown-desktop-ghost" aria-label="Expand dropdown menu" aria-haspopup="true" aria-expanded="false" role="menuitem"></button>
-<ul class="sub-menu" role="menu">
-	<li id="menu-item-4031" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-4031 animated-submenu" role="none">
-<a href="#" class="ct-menu-link" role="menuitem">elite team services<span class="ct-toggle-dropdown-desktop"><svg class="ct-icon" width="8" height="8" viewbox="0 0 15 15"><path d="M2.1,3.2l5.4,5.4l5.4-5.4L15,4.3l-7.5,7.5L0,4.3L2.1,3.2z"></path></svg></span></a><button class="ct-toggle-dropdown-desktop-ghost" aria-label="Expand dropdown menu" aria-haspopup="true" aria-expanded="false" role="menuitem"></button>
-	<ul class="sub-menu" role="menu">
-		<li id="menu-item-3235" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3233 current_page_item menu-item-3235" role="none"><a href="https://tejaltarde.github.io/About//outcoming-resources/" aria-current="page" class="ct-menu-link" role="menuitem">CTO</a></li>
-		<li id="menu-item-3237" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3237" role="none"><a href="https://tejaltarde.github.io/About//ecommerce-2/" class="ct-menu-link" role="menuitem">digital experience design</a></li>
-		<li id="menu-item-3893" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3893" role="none"><a href="https://tejaltarde.github.io/About//digital-product/" class="ct-menu-link" role="menuitem">Digital Product</a></li>
-		<li id="menu-item-3892" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3892" role="none"><a href="https://tejaltarde.github.io/About//digital-product-engineering/" class="ct-menu-link" role="menuitem">Performance Engineering</a></li>
-		<li id="menu-item-3993" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3993" role="none"><a href="https://tejaltarde.github.io/About//monitoring-and-maintance/" class="ct-menu-link" role="menuitem">Monitoring and maintance</a></li>
-		<li id="menu-item-3994" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3994" role="none"><a href="https://tejaltarde.github.io/About//apllication-moderrization/" class="ct-menu-link" role="menuitem">Apllication moderrization</a></li>
-	</ul>
-</li>
-</ul>
-</li>
-<li id="menu-item-4025" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4025" role="none"><a href="https://tejaltarde.github.io/About//blog/" class="ct-menu-link" role="menuitem">Blogs</a></li>
-<li id="menu-item-4026" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4026" role="none"><a href="https://tejaltarde.github.io/About//case-studies/" class="ct-menu-link" role="menuitem">Case Studies</a></li>
-<li id="menu-item-4024" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4024" role="none"><a href="https://tejaltarde.github.io/About//contact/" class="ct-menu-link" role="menuitem">Contact</a></li>
+<li id="menu-item-4044" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4044" role="none"><a href="https://tejaltarde.github.io/About//company/" class="ct-menu-link" role="menuitem">Company</a></li>
 </ul></nav>
 
 </div></div>
@@ -620,41 +608,7 @@ software products</h2>		</div>
 				</div>
 				<nav itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement" class="hfe-nav-menu__layout-horizontal hfe-nav-menu__submenu-arrow" data-toggle-icon="&lt;i aria-hidden=&quot;true&quot; tabindex=&quot;0&quot; class=&quot;fas fa-align-justify&quot;&gt;&lt;/i&gt;" data-close-icon="&lt;i aria-hidden=&quot;true&quot; tabindex=&quot;0&quot; class=&quot;far fa-window-close&quot;&gt;&lt;/i&gt;" data-full-width="yes">
 					<ul id="menu-1-45070cf" class="hfe-nav-menu">
-<li id="menu-item-4036" class="menu-item menu-item-type-custom menu-item-object-custom parent hfe-creative-menu"><a href="https://tejaltarde.github.io/Project.github.io//" class="hfe-menu-item">Home</a></li>
-<li id="menu-item-4035" class="menu-item menu-item-type-custom menu-item-object-custom parent hfe-creative-menu"><a href="https://tejaltarde.github.io/Project.github.io//company/" class="hfe-menu-item">About</a></li>
-<li id="menu-item-4029" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children parent hfe-has-submenu hfe-creative-menu">
-<div class="hfe-has-submenu-container"><a href="#" class="hfe-menu-item">Product<span class="hfe-menu-toggle sub-arrow hfe-menu-child-0"><i class="fa"></i></span></a></div>
-<ul class="sub-menu">
-	<li id="menu-item-3236" class="menu-item menu-item-type-post_type menu-item-object-page hfe-creative-menu"><a href="https://tejaltarde.github.io/About//job-portal-2/" class="hfe-sub-menu-item">Ecommerce Solution</a></li>
-	<li id="menu-item-4030" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children hfe-has-submenu hfe-creative-menu">
-<div class="hfe-has-submenu-container"><a href="#" class="hfe-sub-menu-item">Job Portal<span class="hfe-menu-toggle sub-arrow hfe-menu-child-1"><i class="fa"></i></span></a></div>
-	<ul class="sub-menu">
-		<li id="menu-item-239" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home hfe-creative-menu"><a href="https://tejaltarde.github.io/About//" class="hfe-sub-menu-item">Product</a></li>
-		<li id="menu-item-100" class="menu-item menu-item-type-post_type menu-item-object-page hfe-creative-menu"><a href="https://tejaltarde.github.io/About//company/" class="hfe-sub-menu-item">Company</a></li>
-		<li id="menu-item-290" class="menu-item menu-item-type-post_type menu-item-object-page hfe-creative-menu"><a href="https://tejaltarde.github.io/About//pricing/" class="hfe-sub-menu-item">Pricing</a></li>
-	</ul>
-</li>
-</ul>
-</li>
-<li id="menu-item-4032" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-ancestor current_page_ancestor menu-item-has-children parent hfe-has-submenu hfe-creative-menu">
-<div class="hfe-has-submenu-container"><a href="https://tejaltarde.github.io/About//services/" class="hfe-menu-item">Services<span class="hfe-menu-toggle sub-arrow hfe-menu-child-0"><i class="fa"></i></span></a></div>
-<ul class="sub-menu">
-	<li id="menu-item-4031" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children hfe-has-submenu hfe-creative-menu">
-<div class="hfe-has-submenu-container"><a href="#" class="hfe-sub-menu-item">elite team services<span class="hfe-menu-toggle sub-arrow hfe-menu-child-1"><i class="fa"></i></span></a></div>
-	<ul class="sub-menu">
-		<li id="menu-item-3235" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3233 current_page_item hfe-creative-menu"><a href="https://tejaltarde.github.io/About//outcoming-resources/" class="hfe-sub-menu-item hfe-sub-menu-item-active">CTO</a></li>
-		<li id="menu-item-3237" class="menu-item menu-item-type-post_type menu-item-object-page hfe-creative-menu"><a href="https://tejaltarde.github.io/About//ecommerce-2/" class="hfe-sub-menu-item">digital experience design</a></li>
-		<li id="menu-item-3893" class="menu-item menu-item-type-post_type menu-item-object-page hfe-creative-menu"><a href="https://tejaltarde.github.io/About//digital-product/" class="hfe-sub-menu-item">Digital Product</a></li>
-		<li id="menu-item-3892" class="menu-item menu-item-type-post_type menu-item-object-page hfe-creative-menu"><a href="https://tejaltarde.github.io/About//digital-product-engineering/" class="hfe-sub-menu-item">Performance Engineering</a></li>
-		<li id="menu-item-3993" class="menu-item menu-item-type-post_type menu-item-object-page hfe-creative-menu"><a href="https://tejaltarde.github.io/About//monitoring-and-maintance/" class="hfe-sub-menu-item">Monitoring and maintance</a></li>
-		<li id="menu-item-3994" class="menu-item menu-item-type-post_type menu-item-object-page hfe-creative-menu"><a href="https://tejaltarde.github.io/About//apllication-moderrization/" class="hfe-sub-menu-item">Apllication moderrization</a></li>
-	</ul>
-</li>
-</ul>
-</li>
-<li id="menu-item-4025" class="menu-item menu-item-type-post_type menu-item-object-page parent hfe-creative-menu"><a href="https://tejaltarde.github.io/About//blog/" class="hfe-menu-item">Blogs</a></li>
-<li id="menu-item-4026" class="menu-item menu-item-type-post_type menu-item-object-page parent hfe-creative-menu"><a href="https://tejaltarde.github.io/About//case-studies/" class="hfe-menu-item">Case Studies</a></li>
-<li id="menu-item-4024" class="menu-item menu-item-type-post_type menu-item-object-page parent hfe-creative-menu"><a href="https://tejaltarde.github.io/About//contact/" class="hfe-menu-item">Contact</a></li>
+<li id="menu-item-4044" class="menu-item menu-item-type-post_type menu-item-object-page parent hfe-creative-menu"><a href="https://tejaltarde.github.io/About//company/" class="hfe-menu-item">Company</a></li>
 </ul>				</nav>
 			</div>
 					</div>
